--- a/blog/themes/indie-tufte/static/css/tufte.css
+++ b/blog/themes/indie-tufte/static/css/tufte.css
@@ -80,7 +80,7 @@ p.subtitle { font-style: italic;
 .danger { color: red; }
 
 article { position: relative;
-          padding: 5rem 0rem; }
+          padding: 1rem 0rem; }
 
 section { padding-top: 1rem;
           padding-bottom: 1rem; }
@@ -202,14 +202,15 @@ img { max-width: 100%; }
 .sidenote:before { content: counter(sidenote-counter) " ";
                    top: -0.5rem; }
 
-p, footer, table, div.table-wrapper-small, div.supertable-wrapper > p, div.booktabs-wrapper { width: 55%; }
+p, article, footer, table, div.table-wrapper-small, div.supertable-wrapper > p, div.booktabs-wrapper { max-width: 40rem; }
 
 div.fullwidth, table.fullwidth { width: 100%; }
 
 div.table-wrapper { overflow-x: auto;
                     font-family: "Trebuchet MS", "Gill Sans", "Gill Sans MT", sans-serif; }
 
-@media screen and (max-width: 760px) { p, footer { width: 90%; }
+@media (max-width: 760px) { body {padding-left:1rem; width:95%;}
+                                       p, footer { width: 90%; }
                                        pre.code { width: 87.5%; }
                                        ul { width: 85%; }
                                        figure { max-width: 90%; }
