--- a/blog/themes/indie-tufte/layouts/_default/entry.html
+++ b/blog/themes/indie-tufte/layouts/_default/entry.html
@@ -2,6 +2,11 @@
 <header>
 <h2><a class="p-name u-url" href='{{ .Permalink }}'> {{ .Title }}</a> </h2>
 <div class="post-meta"> <time class="dt-published" datetime="{{ $.Date }}">{{ .Date.Format "January 2 2006" }}</time> - {{ .FuzzyWordCount }} Words </div>
+<div class="tags">
+    {{ range .Params.tags }}
+        <a rel="tag" class="p-category" href="/tags/{{ . | urlize }}">{{ . }}</a> 
+    {{ end }}
+</div>
 </header>
 
 <div class="e-content">{{ .Content }}</div>
