--- a/blog/themes/indie-tufte/layouts/taxonomy/tag.terms.html
+++ b/blog/themes/indie-tufte/layouts/taxonomy/tag.terms.html
@@ -1,6 +1,6 @@
 {{ partial "header.html" . }}
 <section id="main" >
-{{ partial "navblock.html" . }}
+{{ partial "feedblock.html" . }}
   <div>
    <h1 id="title">{{ .Title }}</h1>
    <ul>
