--- a/blog/themes/indie-tufte/layouts/_default/summary.html
+++ b/blog/themes/indie-tufte/layouts/_default/summary.html
@@ -4,7 +4,7 @@
 <div class="post-meta"> <time class="dt-published" datetime="{{ $.Date }}">{{ .Date.Format "January 2 2006" }}</time> - {{ .FuzzyWordCount }} Words </div>
 </header>
 
-<div class="p-summary">{{ .Summary }}</div>
+<div class="p-summary abstract">{{ .Summary }}</div>
 <footer>
 <a href='{{ .Permalink }}'><nobr>Read more →</nobr></a>
 </footer>
