--- a/blog/themes/indie-tufte/layouts/_default/entry.html
+++ b/blog/themes/indie-tufte/layouts/_default/entry.html
@@ -10,4 +10,5 @@
 </header>
 
 <div class="e-content">{{ .Content }}</div>
+by <span  rel="author" class="p-author h-card"><a href="{{ .Site.Params.authorurl }}" >{{ .Site.Params.author }}</a></span>
 </article>
