--- a/blog/themes/indie-tufte/layouts/partials/navblock.html
+++ b/blog/themes/indie-tufte/layouts/partials/navblock.html
@@ -1,2 +1,2 @@
 <h1><a href="/">{{ .Site.Params.name }}</a></h1>
-{{ .Site.Params.summary }} by <span class="h-card">{{ .Site.Params.author }}</span>.
+{{ .Site.Params.summary }} by <span class="h-card"><a href="{{ .Site.Params.authorurl }}" >{{ .Site.Params.author }}</a></span>.
