--- a/blog/layouts/partials/hcard.html
+++ b/blog/layouts/partials/hcard.html
@@ -2,8 +2,8 @@
 <img class="u-photo" src="{{ .Site.Params.authorphoto }}" />
 <h1><a class="u-url u-uid p-name" href="{{ .Site.Params.authorurl }}" >{{ .Site.Params.author }}</a><h1>
 <ul>
-<li><a rel="me" class="u-url" href="https:/twitter.com/ChristopherA">@ChristopherA</a>
-<li><a rel="me" class="u-url" href="https:/github.com/ChristopherA">github</a>
+<li><a rel="me" class="u-url" href="https://twitter.com/ChristopherA">@ChristopherA</a>
+<li><a rel="me" class="u-url" href="https://github.com/ChristopherA">github</a>
 <li><a rel="me" class="u-url" href="http://christophera.livejournal.com/">LiveJournal</a>
 </ul>
 </div>
