Add web mention and fragmention support

--- a/blog/themes/indie-tufte/layouts/partials/footer.html
+++ b/blog/themes/indie-tufte/layouts/partials/footer.html
@@ -1,4 +1,14 @@
 <footer>
+<script id="webmention-hosted">
+(function () {
+var sn = document.createElement("script"), s = document.getElementsByTagName("script")[0], url;
+url = document.querySelectorAll ? document.querySelectorAll("link[rel~=canonical]") : false;
+url = url && url[0] ? url[0].href : false;
+sn.type = "text/javascript"; sn.async = true;
+sn.src = "//webmention.herokuapp.com/api/embed?url=" + encodeURIComponent(url || window.location);
+s.parentNode.insertBefore(sn, s);
+}());
+</script>
 <p>{{ .Site.Params.name }}</p>
 <p>© {{ .Site.Params.author }}</p>
 </footer>
