fix h-card to be representative

--- a/blog/themes/indie-tufte/layouts/about/single.html
+++ b/blog/themes/indie-tufte/layouts/about/single.html
@@ -1,5 +1,5 @@
 {{ partial "header.html" . }}
-{{ partial "navblock.html" . }}
+{{ partial "aboutblock.html" . }}
 <section id="main">
 <div class="e-content">{{ .Content }}</div>
 </section>
