--- a/blog/themes/indie-tufte/layouts/index.html
+++ b/blog/themes/indie-tufte/layouts/index.html
@@ -1,10 +1,11 @@
 {{ partial "header.html" . }}
 <section id="main" class="h-feed">
 {{ partial "feedblock.html" . }}
-  <div>
-    {{ range first 30 .Data.Pages }}
-        {{ .Render "summary"}}
-    {{ end }}
-  </div>
+<div>
+{{ range .Paginator.Pages }}
+   {{ .Render "summary"}}
+{{ end }}
+{{ template "_internal/pagination.html" . }}
+</div>
 </section>
 {{ partial "footer.html" . }}
