--- a/blog/themes/indie-tufte/layouts/partials/feedblock.html
+++ b/blog/themes/indie-tufte/layouts/partials/feedblock.html
@@ -1,4 +1,4 @@
-<h1 class="p-name">{{ .Site.Params.name }} </h1>
+<h1 class="p-name"><a href="/">{{ .Site.Params.name }}</a></h1>
 <label for="hcard" class="margin-toggle">About</label>
 <input type="checkbox" id="hcard" class="margin-toggle"/>
 <span class="marginnote">
