--- a/blog/themes/indie-tufte/static/css/tufte.css
+++ b/blog/themes/indie-tufte/static/css/tufte.css
@@ -34,6 +34,8 @@
   font-weight: normal;
   font-style: normal;
 }
+/* pagination */
+.pagination  {list-style-type:none; display:flex; justify-content:space-between;}
 
 /* indieweb extras */
 [fragmention] { background-color: gold; outline: 0.375em solid gold; }
