redo layout with flexbox
because floats were going crazy. Also paginate tags

--- a/blog/layouts/partials/hcard.html
+++ b/blog/layouts/partials/hcard.html
@@ -1,6 +1,6 @@
 <div class="h-card">
+<h2><a class="u-url u-uid p-name" href="{{ .Site.Params.authorurl }}" >{{ .Site.Params.author }}</a></h2>
 <img class="u-photo" src="{{ .Site.Params.authorphoto }}" />
-<h1><a class="u-url u-uid p-name" href="{{ .Site.Params.authorurl }}" >{{ .Site.Params.author }}</a><h1>
 <p class="abstract p-note p-summary">Principal Architect at Blockstream<br>Internet Cryptography Pioneer<br>Co-author TLS Security Standard<br>Collaborative Tools & Patterns<br>Decentralized Identity</p>
 <ul>
 <li><a rel="me" class="u-url" href="https://twitter.com/ChristopherA">@ChristopherA</a>
