Updated sidebar bio abstract

--- a/blog/layouts/partials/hcard.html
+++ b/blog/layouts/partials/hcard.html
@@ -1,10 +1,10 @@
 <div class="h-card">
 <h2><a class="u-url u-uid p-name" href="{{ .Site.Params.authorurl }}" >{{ .Site.Params.author }}</a></h2>
 <img class="u-photo" src="{{ .Site.Params.authorphoto }}" />
-<p class="abstract p-note p-summary">Principal Architect at Blockstream<br>Internet Cryptography Pioneer<br>Co-author TLS Security Standard<br>Collaborative Tools & Patterns<br>Decentralized Identity</p>
+<p class="abstract p-note p-summary">Blockchain & Decentralized Identity Architect</p>Internet Cryptography Pioneer</p>Co-author TLS Security Standard</p>Collaborative Tools & Patterns</p>
 <ul>
 <li><a rel="me" class="u-url" href="https://twitter.com/ChristopherA">@ChristopherA</a>
 <li><a rel="me" class="u-url" href="https://github.com/ChristopherA">github</a>
-<li><a rel="me" class="u-url" href="http://christophera.livejournal.com/">LiveJournal</a>
+<li><a rel="me" class="u-url" href="https://linkedin.com/in/ChristopherA">github</a>
 </ul>
 </div>
