--- a/blog/themes/indie-tufte/layouts/_default/entry.html
+++ b/blog/themes/indie-tufte/layouts/_default/entry.html
@@ -1,7 +1,7 @@
 <article class="h-entry post">
 <header>
 <h2><a class="p-name u-url" href='{{ .Permalink }}'> {{ .Title }}</a> </h2>
-<div class="post-meta"> <time class="dt-published" datetime="{{ $.Date }}">{{ .Date.Format "January 2 2006" }}</time> - {{ .FuzzyWordCount }} Words </div>
+<div class="post-meta"> <time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05-07:00" }}">{{ .Date.Format "January 2 2006" }}</time> - {{ .FuzzyWordCount }} Words </div>
 by <span  rel="author" class="p-author h-card"><a href="{{ .Site.Params.authorurl }}" >{{ .Site.Params.author }}</a></span>
 </header>
 <div class="e-content">{{ .Content }}</div>
