--- a/blog/themes/indie-tufte/layouts/_default/list.html
+++ b/blog/themes/indie-tufte/layouts/_default/list.html
@@ -1,4 +1,4 @@
 <li class="h-entry">
 <a class="p-name u-url" href='{{ .Permalink }}'> {{ .Title }}</a> </h2>
-<div class="post-meta"> <time class="dt-published" datetime="{{ $.Date }}">{{ .Date.Format "January 2 2006" }}</time> </div>
+<div class="post-meta"> <time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05-07:00" }}">{{ .Date.Format "January 2 2006" }}</time> </div>
 </li>
