--- a/blog/themes/indie-tufte/layouts/_default/summary.html
+++ b/blog/themes/indie-tufte/layouts/_default/summary.html
@@ -1,7 +1,7 @@
 <article class="h-entry post">
 <header>
 <h2><a class="p-name u-url" href='{{ .Permalink }}'> {{ .Title }}</a> </h2>
-<div class="post-meta"> <time class="dt-published" datetime="{{ $.Date }}">{{ .Date.Format "January 2 2006" }}</time> - {{ .FuzzyWordCount }} Words </div>
+<div class="post-meta"> <time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05-07:00" }}">{{ .Date.Format "January 2 2006" }}</time> - {{ .FuzzyWordCount }} Words </div>
 </header>
 <div class="p-summary abstract">{{ if (isset .Params "image") }}<span class="summary-image"><img class="u-featured" src="{{.Params.image}}" alt=""></span>{{end}}{{ .Summary }}</div>
 <footer>
