Linked corrected again

--- a/blog/layouts/partials/hcard.html
+++ b/blog/layouts/partials/hcard.html
@@ -5,6 +5,6 @@
 <ul>
 <li><a rel="me" class="u-url" href="https://twitter.com/ChristopherA">@ChristopherA</a>
 <li><a rel="me" class="u-url" href="https://github.com/ChristopherA">github</a>
-<li><a rel="me" class="u-url" href="https://linkedin.com/in/ChristopherA">github</a>
+<li><a rel="me" class="u-url" href="https://linkedin.com/in/ChristopherA">linkedin</a>
 </ul>
 </div>
