update iterator to conform to changes in Hugo 0.55

--- a/blog/themes/indie-tufte/layouts/index.html
+++ b/blog/themes/indie-tufte/layouts/index.html
@@ -2,7 +2,7 @@
 <div class="fullpage">
 <section id="main" class="h-feed">
 {{ partial "feedblock.html" . }}
-{{ $paginator := .Paginate (where .Data.Pages "Type" "post") }}
+{{ $paginator := .Paginate (where .Site.RegularPages "Type" "post") }}
 {{ range $paginator.Pages }}
    {{ .Render "summary"}}
 {{ end }}
