--- a/blog/themes/indie-tufte/layouts/partials/header.html
+++ b/blog/themes/indie-tufte/layouts/partials/header.html
@@ -6,7 +6,9 @@
     {{ partial "meta.html" . }}
     <title> {{ .Title }}  </title>
     <link rel="canonical" href="{{ .Permalink }}">
-    {{ if .RSSLink }}<link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}" />{{ end }}
+{{ range .AlternativeOutputFormats -}}
+    <link rel="{{ .Rel }}" type="{{ .MediaType.Type }}" href="{{ .Permalink | safeURL }}" title="{{ $.Site.Title | safeURL }}">
+{{ end -}}
     {{ partial "head_includes.html" . }}
 </head>
 <body lang="en">
